added fetch list to check accountid on the bookings